--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
 
     <main>
         <section>
-            <img src="./images/main-pic 1.png" alt = "explore new bikes">
-            <h1>Explore New bikes</h1>
+             <!--Create text on images-->
+            <div class = "container-for-text-image">
+                <img src="./images/main-pic 1.png" alt = "explore new bikes">
+                <div class = "center-right">
+                    <h1>Explore New bikes</h1>
+                </div>
+            </div>
         </section>
         <section id ="b-types">
+           
             <img src="./images/mountain.png" alt = "mountain bicycle">
             <img src="./images/electric.png" alt = "electric bicycle">
             <img src="./images/hybrid.png" alt = "hybrid bicycle">
@@ -52,11 +58,21 @@
         </section>
 
         <section id = "access">
-            <img src="./images/accessories.png" alt = "accessories">
+            <div class = "container-for-text-image">
+                <img src="./images/accessories.png" alt = "accessories">
+                <div class = "center-right">
+                    <h2>Accessories</h2>
+                </div>
+            </div>
         </section>
 
         <section>
-            <img src="./images/customization.png" alt = "Customize your bicycle">
+            <div class = "container-for-text-image">
+                <img src="./images/customization.png" alt = "Customize your bicycle">
+                <div id = "center-right-customize">
+                    <h2>Customize your Cycle</h2>
+                </div>
+            </div>
             </section>
 
         <section id = "subscribtion">
