--- a/about.html
+++ b/about.html
@@ -16,14 +16,7 @@
    <body>
       <header>
          <div class = "header-wrap">
-            <img src="./images/logo3.png" alt = "Vicious Cycles logo" class = "logo">        
-            <div class= "search-container">
-               <i class="fas fa-search"></i>
-               <input type="search" id="search" placeholder="Search..">
-
-            </div>    
-         </div>
-         
+       <img src="./images/logo4.png" alt = "Vicious Cycles logo" class = "logo">
          <nav>
             <ul>
                <li><a href = "index.html">Home</a></li>
@@ -32,10 +25,18 @@
                <li><a href = "events.html">Events</a></li>
                <li><a href = "form.html">Contacts</a></li>
             </ul>
-
          </nav>
+        </div>
+      </header>
       <main class = "about">
+         <i class="fas fa-biking"></i>
          <h1>Our story</h1>
+         <section class = "about-who-are-we">
+            <h2>Who are Vicious Cycles?</h2>
+            <p>Vicious Cycles is a local store for bikers. These can be casual bikes, mountain bikes, high-performance tricked-out BMX bikes, etc. Alternately, these can be Harley Davidson, an American Eagle, mopeds, scooters, Kawasaki’s, or even concept vehicles. 
+               The choice of item is up to you. What brands do you want to sell? Or be a dealer for? Vicious also sells accessories.
+            </p>
+         </section>
          <section class = "about-biography">
             <img src = "images/boss.jpg" alt= "owner picture">
             <div>
@@ -48,12 +49,7 @@
                </p>
             </div>
          </section>
-         <section class = "about-who-are-we">
-            <h2>Who are Vicious Cycles?</h2>
-            <p>Vicious Cycles is a local store for bikers. These can be casual bikes, mountain bikes, high-performance tricked-out BMX bikes, etc. Alternately, these can be Harley Davidson, an American Eagle, mopeds, scooters, Kawasaki’s, or even concept vehicles. 
-               The choice of item is up to you. What brands do you want to sell? Or be a dealer for? Vicious also sells accessories.
-            </p>
-         </section>
+       
          <section class = "philosophy">
             <div>
                <h2>Our Philosophy</h2>
@@ -70,9 +66,7 @@
                Our products have become the supply line of choice and lesser companies have been copying us for some time. 
                Don't be fooled by imitators, Vicious Cycles is the real deal. 
             </p>
-            <br>
             <p>Don't settle for second best when it comes to your cycling needs, but don't feel you have to raid your savings. Vicious Cycle Products is a name you can put your trust in, at a price you can afford. Of course, custom work is another thing entirely. At Vicious Cycles, we are not interested in a "Race to the Bottom" when it comes to creating custom builds. </p>
-            <br>
             <p>If you're interested in discussing a fully custom or customized build, come down to our store and visit with us to find out what we can really do.</p>
          </section>
       </main>
@@ -81,12 +75,12 @@
             <div class = "Links">
                <section class = "contactLinks">
                   <h4>Contact Us</h4>
-                  <p>info@ViciousCycles.com</p>
-                  <p>(919) 123-4567</p>
-                  <p>123 Main St.Pittsboro, NC 27000</p>
+                  <p><i class="far fa-envelope"></i>info@ViciousCycles.com</p>
+                  <p><i class="fas fa-mobile-alt"></i>(919) 123-4567</p>
+                  <p><i class="fas fa-home"></i>123 Main St.Pittsboro, NC 27000</p>
                </section>
 
-               <section class = "contactLinks" id ="helpfull-links-section">
+               <section id ="helpfull-links-section">
                   <h4 class = "helpfull-links">Helpful links</h4>
                   <ul>
                      <li><a href ="https://www.bicycle-guider.com/bike-articles/bike-size-chart/"  target="_blank">How to choose right bike</a></li>
@@ -103,5 +97,6 @@
             </section>
          </div>
       </footer>
+      <script src="https://use.fontawesome.com/8658788886.js"></script>
    </body>
 </html>
