--- a/events.html
+++ b/events.html
@@ -16,14 +16,7 @@
    <body>
       <header>
          <div class = "header-wrap">
-            <img src="./images/logo3.png" alt = "Vicious Cycles logo" class = "logo">        
-            <div class= "search-container">
-               <i class="fas fa-search"></i>
-               <input type="search" id="search" placeholder="Search..">
-
-            </div>    
-         </div>
-         
+           <img src="./images/logo4.png" alt = "Vicious Cycles logo" class = "logo">
          <nav>
             <ul>
                <li><a href = "index.html">Home</a></li>
@@ -32,18 +25,19 @@
                <li><a href = "events.html">Events</a></li>
                <li><a href = "form.html">Contacts</a></li>
             </ul>
-
          </nav>
+        </div>
       </header>
       <main class = "events">
+         <i class="fas fa-biking"></i>
        <h1>Events</h1>
        <h3>December 2021</h3>
        <section class = "first-event">
             <img src= "images/event-1.jpg" alt ="first event race">
             <div>
-                <h2>Roof race</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                <h2>Root race</h2>
+                <p>Raleigh will host the Night Cycling Fest dedicated to national unity.
+                  Participants will drive past consulates, churches, synagogues. There will be four stops along the route, with cyclists finishing in the city center.</p>
                 <h3>Date: 01/12/2021</h3>   
                 <h4>4.00PM</h4>
             </div>
@@ -52,8 +46,8 @@
         <img src= "images/event-2.jpg" alt ="second event race">
         <div>
             <h2>Winter Short Track</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p>We invite everyone to the marathon warpath. Cyclists will have marathons of 200 km, 100 km and 42 km. Runners will try to master the 100 km long ultra marathon, 42 km trail marathon and 21 km half marathon. And for the most insane - multimarathon 145 km.
+               Dirt roads and trails for every taste are waiting for you!</p>
             <h3>Date: 01/15/2021</h3>   
             <h4>2.00PM</h4>
         </div>
@@ -64,12 +58,12 @@
             <div class = "Links">
                <section class = "contactLinks">
                   <h4>Contact Us</h4>
-                  <p>info@ViciousCycles.com</p>
-                  <p>(919) 123-4567</p>
-                  <p>123 Main St.Pittsboro, NC 27000</p>
+                  <p><i class="far fa-envelope"></i>info@ViciousCycles.com</p>
+                  <p><i class="fas fa-mobile-alt"></i>(919) 123-4567</p>
+                  <p><i class="fas fa-home"></i>123 Main St.Pittsboro, NC 27000</p>
                </section>
 
-               <section class = "contactLinks" id ="helpfull-links-section">
+               <section id ="helpfull-links-section">
                   <h4 class = "helpfull-links">Helpful links</h4>
                   <ul>
                      <li><a href ="https://www.bicycle-guider.com/bike-articles/bike-size-chart/"  target="_blank">How to choose right bike</a></li>
@@ -86,5 +80,6 @@
             </section>
          </div>
       </footer>
+      <script src="https://use.fontawesome.com/8658788886.js"></script>
    </body>
 </html>
