--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel = "stylesheet" href = "css/style.css">
-      <link rel = "stylesheet" href = "css/phone.css">
+     <link rel = "stylesheet" href = "css/phone.css">
+     <link rel = "stylesheet" href = "css/style.css">
       <link rel = "stylesheet" href = "css/tablet.css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,14 +16,7 @@
    <body>
       <header>
          <div class = "header-wrap">
-            <img src="./images/logo3.png" alt = "Vicious Cycles logo" class = "logo">        
-            <div class= "search-container">
-               <i class="fas fa-search"></i>
-               <input type="search" id="search" placeholder="Search..">
-
-            </div>    
-         </div>
-         
+            <img src="./images/logo4.png" alt = "Vicious Cycles logo" class = "logo">
          <nav>
             <ul>
                <li><a href = "index.html">Home</a></li>
@@ -32,63 +25,44 @@
                <li><a href = "events.html">Events</a></li>
                <li><a href = "form.html">Contacts</a></li>
             </ul>
-
          </nav>
+        </div>
       </header>
       <main>
          <section class = "main-section">
-            <!--Create text on images-->
-            <div class = "container-for-text-image">
-               <img src="./images/main-pic1.png" alt = "explore new bikes">
-               <div class = "center-right-heading-first">
+            <i class="fas fa-biking"></i>
                   <h1>Explore New bikes</h1>
-               </div>
-            </div>
+                  <a href="shop.html">Go</a>
          </section>
          <section class = "introduction">
-            <p>Vicious Cycles Inc is a Pittsboro - based cycle workshop founded by a few like-minded individuals in late 2010. Our mechanics build the bikes and man the workshop. Our customer service staff attends to the day-to-day operations. We hope to create and foster a strong passion for the local biking scene because each and every one of us is a biking enthusiast.</p>
-            <p>We believe that every machine should be an extension of its owner. We believe in the significance of individualism. We believe in the stories between your cycle and you. We believe in having fun. No matter the circumstances, we bike hard and we bike often.</p>
+            <p>Vicious Cycles Inc is a Pittsboro - based cycle workshop founded by a few like-minded individuals in late 2010. Our mechanics build the bikes and man the workshop. Our customer service staff attends to the day-to-day operations. We hope to create and foster a strong passion for the local biking scene because each and every one of us is a biking enthusiast.</p><br>
+            <p>We believe that every machine should be an extension of its owner. We believe in the significance of individualism. We believe in the stories between your cycle and you. We believe in having fun. No matter the circumstances, we bike hard and we bike often.</p><br>
             <p> You get on your bike, you ride, you fall, you might get pulled over, you overcome it all and you ride again. It’s a Vicious Cycle! So make it worth the while, don't just be part of the numbers. Ride your cycle, chase your dreams, live your life.</p>
          </section>
          <section class ="b-types">
-            <a href="shop.html"><img src="./images/mountain.png" alt = "mountain bicycle"></a>
-            <a href="shop.html"><img src="./images/electric.png" alt = "electric bicycle"></a>
-            <a href="shop.html"><img src="./images/hybrid.png" alt = "hybrid bicycle"></a>
+            <a href="shop.html"><img src="./images/mountain.jpg" alt = "mountain bicycle"></a>
+            <a href="shop.html"><img src="./images/bicycle-electro.jpg" alt = "electric bicycle"></a>
+            <a href="shop.html"><img src="./images/hybrid-2.jpg" alt = "hybrid bicycle"></a>
          </section>
          <section class = "access">
-            <div class = "container-for-text-image">
-               <img src="./images/accessories.png" alt = "accessories">
-               <div class = "center-right">
-                  <h2>Accessories</h2>
-               </div>
-            </div>
+                  <h2><a href ="shop.html">Accessories</a></h2>
          </section>
          <section class = "customize-section">
-            <div class = "container-for-text-image">
-               <img src="./images/customization.png" alt = "Customize your bicycle">
-               <div class = "center-right-customize">
-                  <h2>Customize your Cycle</h2>
-               </div>
-            </div>
+                  <h2><a href ="shop.html">Customize your Cycle</a></h2>
          </section>
-         <section class = "subscribtion">
-            <h6>To receive information about our discounts...</h6>
-            <input type = "text" value="Type your email..." class = "sub-field">
-            <h6>......and press the button!</h6>
-            <input type="submit" value="Subscribe" class ="submit">
-         </section>
+        
       </main>
       <footer>
          <div class = "footer-container">
             <div class = "Links">
                <section class = "contactLinks">
                   <h4>Contact Us</h4>
-                  <p>info@ViciousCycles.com</p>
-                  <p>(919) 123-4567</p>
-                  <p>123 Main St.Pittsboro, NC 27000</p>
+                  <p><i class="far fa-envelope"></i>info@ViciousCycles.com</p>
+                  <p><i class="fas fa-mobile-alt"></i>(919) 123-4567</p>
+                  <p><i class="fas fa-home"></i>123 Main St.Pittsboro, NC 27000</p>
                </section>
 
-               <section class = "contactLinks" id ="helpfull-links-section">
+               <section id ="helpfull-links-section">
                   <h4 class = "helpfull-links">Helpful links</h4>
                   <ul>
                      <li><a href ="https://www.bicycle-guider.com/bike-articles/bike-size-chart/"  target="_blank">How to choose right bike</a></li>
