--- a/form.html
+++ b/form.html
@@ -14,34 +14,27 @@
     <title>Contacts</title>
 </head>
 <body>
+   <header>
+      <div class = "header-wrap">
+       <img src="./images/logo4.png" alt = "Vicious Cycles logo" class = "logo">
+      <nav>
+         <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "shop.html">Shop</a></li>
+            <li><a href = "about.html">About</a></li>
+            <li><a href = "events.html">Events</a></li>
+            <li><a href = "form.html">Contacts</a></li>
+         </ul>
+      </nav>
+     </div>
+   </header>
 
-    <header>
-        <div class = "header-wrap">
-           <img src="./images/logo3.png" alt = "Vicious Cycles logo" class = "logo">        
-           <div class= "search-container">
-              <i class="fas fa-search"></i>
-              <input type="search" id="search" placeholder="Search..">
-
-           </div>    
-        </div>
-        
-        <nav>
-           <ul>
-              <li><a href = "index.html">Home</a></li>
-              <li><a href = "shop.html">Shop</a></li>
-              <li><a href = "about.html">About</a></li>
-              <li><a href = "events.html">Events</a></li>
-              <li><a href = "form.html">Contacts</a></li>
-           </ul>
-
-        </nav>
-    </header>
-
-    <main class = "form">
+    <main class = "contacts">
+      <i class="fas fa-biking"></i>
         <h1>Feel Free to reach us out</h1>
+        
         <div class = "form-container">
             <section>
-                <h6 class = "questions">If you have any questions, please fill out the form!</h6>
                 <form class = "form">
                     <label for= "name">Your name: </label><br>
                     <input type="text" placeholder ="John Doe..." id = "name" class = "textbox"><br>
@@ -78,42 +71,51 @@
                 </form>
             </section>
             <section class = "map">
-                <section class = "contactLinks">
-                    <h4>Contact Us</h4>
-                    <p>info@ViciousCycles.com</p>
-                    <p>(919) 123-4567</p>
-                    <p>123 Main St.Pittsboro, NC 27000</p>
+                <section class = "hours">
+                   <h4>Hours of operations:</h4>
+                   <ul>
+                      <li>Monday:<span> 7am-6pm</span></li>
+                      <li>Tuesday: <span> 7am-6pm</span></li>
+                      <li>Wednesday: <span> 7am-6pm</span></li>
+                      <li>Thursday: <span> 7am-6pm</span></li>
+                      <li>Friday: <span> 7am-6pm</span></li>
+                      <li>Saturday: <span> 10am-6pm</span></li>
+                      <li>Sunday: <span>10am-6pm</span></li>
+                   </ul>
+                   <p>Address:123 Main St.Pittsboro, NC 27000</p>
                  </section>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25909.630539138983!2d-79.18590394904145!3d35.73350206801888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89acb97f2695f989%3A0x7d512c2db0470c33!2z0J_QuNGC0YLRgdCx0L7RgNC-LCDQodC10LLQtdGA0L3QsNGPINCa0LDRgNC-0LvQuNC90LAgMjczMTI!5e0!3m2!1sru!2sus!4v1637295950497!5m2!1sru!2sus" width="450" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25909.630539138983!2d-79.18590394904145!3d35.73350206801888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89acb97f2695f989%3A0x7d512c2db0470c33!2z0J_QuNGC0YLRgdCx0L7RgNC-LCDQodC10LLQtdGA0L3QsNGPINCa0LDRgNC-0LvQuNC90LAgMjczMTI!5e0!3m2!1sru!2sus!4v1637295950497!5m2!1sru!2sus" 
+                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </section>
     </div>
      </main>
      <footer>
-        <div class = "footer-container">
-           <div class = "Links">
-              <section class = "contactLinks">
-                 <h4>Contact Us</h4>
-                 <p>info@ViciousCycles.com</p>
-                 <p>(919) 123-4567</p>
-                 <p>123 Main St.Pittsboro, NC 27000</p>
-              </section>
+      <div class = "footer-container">
+         <div class = "Links">
+            <section class = "contactLinks">
+               <h4>Contact Us</h4>
+               <p><i class="far fa-envelope"></i>info@ViciousCycles.com</p>
+               <p><i class="fas fa-mobile-alt"></i>(919) 123-4567</p>
+               <p><i class="fas fa-home"></i>123 Main St.Pittsboro, NC 27000</p>
+            </section>
 
-              <section class = "contactLinks" id ="helpfull-links-section">
-                 <h4 class = "helpfull-links">Helpful links</h4>
-                 <ul>
-                    <li><a href ="https://www.bicycle-guider.com/bike-articles/bike-size-chart/"  target="_blank">How to choose right bike</a></li>
-                    <li><a href = "https://www.thecyclingexperts.co.uk/get-cycling/buying-a-bike/choosing-the-right-bicycle/"  target="_blank">How to choose right bike size</a></li>
-                 </ul>
-              </section>
-           </div>
-           <section class = "copyright">
-              <p id = "copyright">Vicious Cycles © 2021 </p>
-              <div class = "social-media-footer">
-                 <a href="https://www.facebook.com/" target="_blank"><img src="./images/white-facebook.png" alt = "facebook link"></a>
-                 <a href="https://twitter.com/?lang=en" target="_blank"><img src = "./images/white-twitter.png" alt = "twitter link"></a>
-              </div>
-           </section>
-        </div>
-     </footer>
-     </body>
-  </html>
+            <section id ="helpfull-links-section">
+               <h4 class = "helpfull-links">Helpful links</h4>
+               <ul>
+                  <li><a href ="https://www.bicycle-guider.com/bike-articles/bike-size-chart/"  target="_blank">How to choose right bike</a></li>
+                  <li><a href = "https://www.thecyclingexperts.co.uk/get-cycling/buying-a-bike/choosing-the-right-bicycle/"  target="_blank">How to choose right bike size</a></li>
+               </ul>
+            </section>
+         </div>
+         <section class = "copyright">
+            <p id = "copyright">Vicious Cycles © 2021 </p>
+            <div class = "social-media-footer">
+               <a href="https://www.facebook.com/" target="_blank"><img src="./images/white-facebook.png" alt = "facebook link"></a>
+               <a href="https://twitter.com/?lang=en" target="_blank"><img src = "./images/white-twitter.png" alt = "twitter link"></a>
+            </div>
+         </section>
+      </div>
+   </footer>
+   <script src="https://use.fontawesome.com/8658788886.js"></script>
+</body>
+</html>
