--- a/shop.html
+++ b/shop.html
@@ -5,25 +5,18 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel = "stylesheet" href = "css/style.css">
+      <link rel = "stylesheet" href = "css/tablet.css">
       <link rel = "stylesheet" href = "css/phone.css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet">
-      <link rel = "stylesheet" href = "css/tablet.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap" rel="stylesheet">
       <title>Vicious Cycles</title>
    </head>
    <body>
-    <header>
+    <header id = "home-page-header">
         <div class = "header-wrap">
-           <img src="./images/logo3.png" alt = "Vicious Cycles logo" class = "logo">        
-           <div class= "search-container">
-              <i class="fas fa-search"></i>
-              <input type="search" id="search" placeholder="Search..">
-
-           </div>    
-        </div>
-        
+           <img src="./images/logo4.png" alt = "Vicious Cycles logo" class = "logo">
         <nav>
            <ul>
               <li><a href = "index.html">Home</a></li>
@@ -32,47 +25,47 @@
               <li><a href = "events.html">Events</a></li>
               <li><a href = "form.html">Contacts</a></li>
            </ul>
-
         </nav>
-      </header>
+       </div>
+     </header>
+     <aside>
+        <div>
+            <h5>Price</h5>
+            <a><span>Up to $500</span></a><br>
+            <a><span>$500-$1000</span></a><br>
+            <a><span>$1000-$5000</span></a><br>
+            <a><span>$5000 and above</span></a><br>
+            <input type="text" placeholder="Min" class = "price-range-box">
+            <input type="text" placeholder="Max" class = "price-range-box">
+            <input type="submit" value = "Go" id="sub-shop">
+        </div>
+        <div>
+            <h5>Type</h5>
+            <div class = "aside-container-type">
+                <label for = "mountain">
+                    <input type="checkbox" id="mountain" name = "mountain" value = "Mountain" class = "check" checked="checked">Mountain
+                </label><br>
+                <label for = "hybrid">
+                    <input type="checkbox" id="hybrid" name = "hybrid" value = "hybrid" class = "check">Hybrid 
+                </label> <br>
+                <label for = "electric">
+                    <input type="checkbox" id="electric" name = "electric" value = "electric" class = "check"> Electric
+                </label><br>
+            </div>
+        </div>
+        <div>
+            <h5>Department</h5>
+            <a><span>Bicycles</span></a><br>
+            <a><span>Accessories</span></a><br>
+            <a><span>Parts</span></a><br>
+        </div>
+    </aside>
       <main class = "shop">
+        <i class="fas fa-biking"></i>
        <h1>Shop</h1>
        <h3>Mountain bicycles</h3>
        <div class = "shop-container-main">
-        <aside>
-            <div>
-                <h5>Price</h5>
-                <a><span>Up to $500</span></a><br>
-                <a><span>$500-$1000</span></a><br>
-                <a><span>$1000-$5000</span></a><br>
-                <a><span>$5000 and above</span></a><br>
-                <input type="text" placeholder="Min" class = "price-range-box">
-                <input type="text" placeholder="Max" class = "price-range-box">
-                <input type="submit" value = "Go" id="sub-shop">
-            </div>
-            <div>
-                <h5>Type</h5>
-                <div class = "aside-container-type">
-                    <label for = "mountain">
-                        <input type="checkbox" id="mountain" name = "mountain" value = "Mountain" class = "check" checked="checked">Mountain
-                    </label><br>
-                    <label for = "hybrid">
-                        <input type="checkbox" id="hybrid" name = "hybrid" value = "hybrid" class = "check">Hybrid 
-                    </label> <br>
-                    <label for = "electric">
-                        <input type="checkbox" id="electric" name = "electric" value = "electric" class = "check"> Electric
-                    </label><br>
-                </div>
-            </div>
-            <div>
-                <h5>Department</h5>
-                <a><span>Bicycles</span></a><br>
-                <a><span>Accessories</span></a><br>
-                <a><span>Parts</span></a><br>
-            </div>
-        </aside>
-
-        <section class = "shop">
+        <section class = "shopSection">
             <div>
                 <img src="images/shop/shop1.jpg" alt ="Buffallo Mountain Bike">
                 <p>Buffallo Mountain Bike</p>
@@ -99,7 +92,7 @@
             </div>
             <div>
                 <img src="images/shop/shop5.jpg" alt ="new Hope mountain bicycle">
-                <p>new Hope mountain bicycle</p>
+                <p>Hope mountain bicycle</p>
                 <p>$5800.00</p>
                 <button class = "add-to-cart-btn">Add to cart</button>
             </div>
@@ -107,6 +100,18 @@
                 <img src="images/shop/shop6.jpg" alt ="Mountain Ridge bicycle">
                 <p>Mountain Ridge bicycle</p>
                 <p>$4200.00</p>
+                <button class = "add-to-cart-btn">Add to cart</button>
+            </div>
+            <div>
+                <img src="images/shop/shop7.jpg" alt ="Helmet">
+                <p>Helmet</p>
+                <p>$70.00</p>
+                <button class = "add-to-cart-btn">Add to cart</button>
+            </div>
+            <div>
+                <img src="images/shop/shop8.jpg" alt ="Cycling Suit">
+                <p>Cycling Suit</p>
+                <p>$56.00</p>
                 <button class = "add-to-cart-btn">Add to cart</button>
             </div>
 
@@ -119,12 +124,12 @@
            <div class = "Links">
               <section class = "contactLinks">
                  <h4>Contact Us</h4>
-                 <p>info@ViciousCycles.com</p>
-                 <p>(919) 123-4567</p>
-                 <p>123 Main St.Pittsboro, NC 27000</p>
+                 <p><i class="far fa-envelope"></i>info@ViciousCycles.com</p>
+                 <p><i class="fas fa-mobile-alt"></i>(919) 123-4567</p>
+                 <p><i class="fas fa-home"></i>123 Main St.Pittsboro, NC 27000</p>
               </section>
 
-              <section class = "contactLinks" id ="helpfull-links-section">
+              <section id ="helpfull-links-section">
                  <h4 class = "helpfull-links">Helpful links</h4>
                  <ul>
                     <li><a href ="https://www.bicycle-guider.com/bike-articles/bike-size-chart/"  target="_blank">How to choose right bike</a></li>
@@ -141,5 +146,6 @@
            </section>
         </div>
      </footer>
+     <script src="https://use.fontawesome.com/8658788886.js"></script>
  </body>
 </html>
